obsidian-tidy-ast/src/ast/node/snapshots/obsidian_tidy_ast__ast__node__block_quote__tests__ast.snap
---
source: obsidian-tidy-ast/src/ast/node/block_quote.rs
expression: ast
---
{
  "Root": {
    "children": [
      {
        "Heading": {
          "level": "H1",
          "children": [
            {
              "Text": "Define",
              "offset": {
                "start": 2,
                "end": 8
              }
            }
          ]
        },
        "offset": {
          "start": 0,
          "end": 9
        }
      },
      {
        "BlockQuote": {
          "children": [
            {
              "Paragraph": {
                "children": [
                  {
                    "Text": "My ",
                    "offset": {
                      "start": 10,
                      "end": 13
                    }
                  },
                  {
                    "Strong": {
                      "children": [
                        {
                          "Text": "super",
                          "offset": {
                            "start": 15,
                            "end": 20
                          }
                        }
                      ]
                    },
                    "offset": {
                      "start": 13,
                      "end": 22
                    }
                  },
                  {
                    "Text": " quote",
                    "offset": {
                      "start": 22,
                      "end": 28
                    }
                  }
                ]
              },
              "offset": {
                "start": 10,
                "end": 28
              }
            }
          ]
        },
        "offset": {
          "start": 9,
          "end": 28
        }
      }
    ]
  },
  "offset": {
    "start": 0,
    "end": 28
  }
}
